--- a/modern-theme.scss
+++ b/modern-theme.scss
@@ -1,11 +1,11 @@
 /* ==UserStyle==
 @name           Modern Theme
-@namespace      github.com/openstyles/stylus
-@version        1.0.0
+@namespace      github.com/ultimateshadsform/spacehey-modern-theme
+@version        1.0.1
 @description    A modern theme for SpaceHey. Please go and edit the --primary-color to your color of choice.
 @author         Me
 ==/UserStyle== */
-@-moz-document domain("spacehey.com"), url("https://spacehey.com/home"), url("https://layouts.spacehey.com/"),
+@-moz-document domain("https://spacehey.com"), url("https://spacehey.com/home"), url("https://layouts.spacehey.com/"),
 url("https://spacehey.com/browse"),
 url("https://spacehey.com/search"),
 url("https://spacehey.com/bulletins"),
