--- a/modern-theme.scss
+++ b/modern-theme.scss
@@ -11,7 +11,7 @@ url("https://spacehey.com/search"),
 url("https://spacehey.com/bulletins"),
 url("https://spacehey.com/favorites"),
 url("https://spacehey.com/about"),
-url("https://im.spacehey.com/"),
+url-prefix("https://im.spacehey.com/"),
 url("https://blog.spacehey.com/"),
 url("https://forum.spacehey.com/"),
 url("https://spacehey.com/requests"),
