--- a/modern-theme.scss
+++ b/modern-theme.scss
@@ -10,6 +10,7 @@ url("https://spacehey.com/browse"),
 url("https://spacehey.com/search"),
 url("https://spacehey.com/bulletins"),
 url("https://spacehey.com/favorites"),
+url("https://spacehey.com/notifications"),
 url("https://spacehey.com/about"),
 url-prefix("https://im.spacehey.com/"),
 url("https://blog.spacehey.com/"),
