--- a/modern-theme.scss
+++ b/modern-theme.scss
@@ -8,7 +8,7 @@
 @-moz-document domain("https://spacehey.com"), url("https://spacehey.com/home"), url("https://layouts.spacehey.com/"),
 url("https://spacehey.com/browse"),
 url("https://spacehey.com/search"),
-url("https://spacehey.com/bulletins"),
+url("https://spacehey.com/bulletins"), url-prefix("https://spacehey.com/friends"),
 url("https://spacehey.com/favorites"),
 url("https://spacehey.com/notifications"),
 url("https://spacehey.com/about"),
