--- a/modern-theme.scss
+++ b/modern-theme.scss
@@ -6,8 +6,8 @@
 @author         Me
 ==/UserStyle== */
 @-moz-document domain("https://spacehey.com"), url("https://spacehey.com/home"), url("https://layouts.spacehey.com/"),
-url("https://spacehey.com/browse"),
-url("https://spacehey.com/search"),
+url-prefix("https://spacehey.com/browse"),
+url-prefix("https://spacehey.com/search"),
 url("https://spacehey.com/bulletins"), url-prefix("https://spacehey.com/friends"),
 url("https://spacehey.com/favorites"),
 url("https://spacehey.com/notifications"),
