--- a/modern-theme.scss
+++ b/modern-theme.scss
@@ -5,7 +5,7 @@
 @description    A modern theme for SpaceHey. Please go and edit the --primary-color to your color of choice.
 @author         Me
 ==/UserStyle== */
-@-moz-document domain("https://spacehey.com"), url("https://spacehey.com/home"), url("https://layouts.spacehey.com/"),
+@-moz-document domain("https://spacehey.com"), url("https://spacehey.com/home"), url-prefix("https://layouts.spacehey.com/"),
 url-prefix("https://spacehey.com/browse"),
 url-prefix("https://spacehey.com/search"),
 url("https://spacehey.com/bulletins"), url-prefix("https://spacehey.com/friends"),
